--- a/main.html
+++ b/main.html
@@ -39,13 +39,13 @@
     <a href="https://github.com/cgymmy">Github</a>
     </div></p>
 
-    <section id="about">
+    <section>
         <h2>About Me</h2>
         <p>I am currently in my first year of PhD at <a href="https://ic.zju.edu.cn/main.htm">College of IC, Zhejiang University</a>, under the supervision of Professor <a href="https://person.zju.edu.cn/nidong">Dong Ni</a>. 
             I completed my B.S. degree in <a href="http://www.math.zju.edu.cn/api2017/index.psp">Mathematics and Applied Mathematics, Zhejiang University</a> in 2024.</p>
     </section>
 
-    <section id="services">
+    <section>
         <h2>Statements</h2>
         <p>I am currently deeply interested in the topic of <strong>multiscale systems</strong>, both from a theoretical and applied perspective. My primary focus is on understanding the <strong>asymptotic behavior</strong> of these systems, and I am particularly keen on learning about theories related to <strong>mean-field theory</strong> and <strong>homogenization</strong>. These theoretical frameworks allow for a deeper analysis of multiscale systems across different scales.</p>
 
@@ -54,7 +54,7 @@
         <p>I aim to analyze the progression from <strong>microscopic</strong> to <strong>macroscopic scales</strong> using <strong>asymptotic analysis</strong>, which is closely related to the principles of <strong>mean-field theory</strong>. Interestingly, this perspective can also be applied to <strong>neural networks</strong>. By considering each neuron as a particle, I hope to explore how the propagation of signals within a network can be understood through similar principles.</p>
 
         <p>This line of research involves a substantial amount of knowledge related to <strong>Stochastic Differential Equations (SDEs)</strong>, a field that I am passionate about. I am actively pursuing studies in this area, with the goal of applying these insights to the development of <strong>diffusion models</strong>.</p>
-
     </section>
+
 </body>
 </html>
