--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage</title>
-    <style>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Homepage</title>
+        <style>
         header {
             display: flex;
             align-items: center;
@@ -24,7 +24,7 @@
         }
 
         body {
-            background-color: #00eeff;
+            background-color: #fdf5e6;
         }
 
         header div {
@@ -37,77 +37,114 @@
             /* 设置所有链接字体大小为0.8rem */
         }
     </style>
-</head>
+    </head>
 
-<body>
-    <header>
-        <div id="avatar"></div>
-        <h1>Guanyu Chen</h1>
-    </header>
-
-    <p>
-    <div><a href="3200102033@zju.edu.cn">Email</a>
-        <a href="https://github.com/cgymmy">Github</a>
-    </div>
-    </p>
-
-    <section>
-        <h2>About Me</h2>
-        <p>I am currently in my first year of PhD at <a href="https://ic.zju.edu.cn/main.htm">College of IC, Zhejiang
-                University</a>, under the supervision of Professor <a href="https://person.zju.edu.cn/nidong">Dong
-                Ni</a>.
-            I completed my B.S. degree in <a href="http://www.math.zju.edu.cn/api2017/index.psp">Mathematics and Applied
-                Mathematics, Zhejiang University</a> in 2024.</p>
-    </section>
-
-    <section>
-        <h2>Statements</h2>
-        <p>I am currently deeply interested in the topic of <strong>Multiscale Systems</strong>, with a particular focus
-            on both their theoretical foundations and practical applications. My primary research interest lies in
-            understanding the <strong>asymptotic behavior</strong> of
-            these systems, with a strong emphasis on the theories of <strong>mean-field</strong> and
-            <strong>homogenization</strong>.
-            These frameworks provide essential tools for conducting a more comprehensive analysis of multiscale
-            phenomena across various scales.
-        </p>
-
-        <p><strong>Multiscale systems</strong> typically involve both <strong>temporal</strong> and <strong>spatial
-                scales</strong>, which are often interdependent. Spatially, the scales range from the
-            <strong>microscopic</strong> (atomic) level to the <strong>macroscopic</strong> (fluid) level. In
-            <strong>microscopic systems</strong>, At the microscopic scale, large particles undergo <strong>Brownian
-                motion</strong> due to collisions with smaller particles, which can be described using
-            <strong>Stochastic Ordinary Differential Equation (SODE)</strong>. As the number of particles tends to
-            infinity, the behavior of the system can be captured by <strong>Stochastic Partial Differential Equation
-                (SPDE)</strong>. When the randomness of the system stabilizes, it can be described by a <strong>Partial
-                Differential Equation (PDE)</strong>, which describe the macroscopic phenomena.
-        </p>
+    <body>
+        <header>
+            <div id="avatar"></div>
+            <h1>Guanyu Chen</h1>
+        </header>
 
         <p>
-            My research aims to rigorously investigate the progression from <strong>microscopic</strong> to
-            <strong>macroscopic</strong> scales through the application of <strong>asymptotic analysis</strong>, a
-            method that aligns closely with the principles of <strong>mean-field theory</strong>. This approach has the
-            potential to be extended beyond physical systems, offering a valuable perspective for the analysis of
-            <strong>neural networks</strong>. By conceptualizing each neuron as a particle, I seek to explore how the
-            propagation of signals within a network may be understood through analogous principles.
+            <div><a href="3200102033@zju.edu.cn">Email</a>
+                <a href="https://github.com/cgymmy">Github</a>
+            </div>
         </p>
 
-        <p>
-            The study of <strong>Stochastic Differential Equations (SDEs)</strong> is integral to this research, as it
-            underpins much of the theoretical framework required for analyzing multiscale systems. I am actively
-            pursuing advanced studies in this area, with the goal of leveraging these insights to contribute to the
-            development of <strong>diffusion models</strong>.
-        </p>
+        <section>
+            <h2>About Me</h2>
+            <p>I am currently in my first year of PhD at <a
+                    href="https://ic.zju.edu.cn/main.htm">College of IC,
+                    Zhejiang
+                    University</a>, under the supervision of Professor <a
+                    href="https://person.zju.edu.cn/nidong">Dong
+                    Ni</a>.
+                I completed my B.S. degree in <a
+                    href="http://www.math.zju.edu.cn/api2017/index.psp">Mathematics
+                    and Applied
+                    Mathematics, Zhejiang University</a> in 2024.</p>
+        </section>
 
-        <p>
-            Prior to this, I conducted research on the integration of classical numerical algorithms with
-            <strong>Physics-Informed Neural Networks (PINNs)</strong>. However, I have come to recognize that the
-            potential for further development of PINN-based methods is somewhat constrained. As a result, I have
-            developed a keen interest in exploring the construction of more effective <strong>Neural Operators</strong>,
-            as I believe that, in many aspects such as flexibility, neural operators offer distinct advantages over
-            PINNs.
-        </p>
-    </section>
+        <section>
+            <h2>Statements</h2>
+            <p>I am currently deeply interested in the topic of
+                <strong>Multiscale Systems</strong>, with a particular focus
+                on both their theoretical foundations and practical
+                applications. Cause you know in the process of <strong>IC
+                    manufacturing</strong>, etching, deposition and other
+                processes are
+                involved, which is a classic multiscale system. So my primary
+                research interest lies in
+                understanding the <strong>asymptotic behavior</strong> of
+                these systems, with a strong emphasis on the theories of
+                <strong>mean-field</strong> and
+                <strong>homogenization</strong>.
+                These frameworks provide essential tools for conducting a more
+                comprehensive analysis of multiscale
+                phenomena across various scales.
+            </p>
 
-</body>
+            <p>Normally, <strong>Multiscale systems</strong> typically involve
+                both
+                <strong>temporal</strong> and <strong>spatial
+                    scales</strong>, which are often interdependent. Spatially,
+                the scales range from the
+                <strong>microscopic</strong> (atomic) level to the
+                <strong>macroscopic</strong> (fluid) level. In
+                <strong>microscopic systems</strong>,
+                large particles move follow <strong>Brownian
+                    motion</strong> due to collisions of smaller particles,
+                which can be described using
+                <strong>Stochastic Ordinary Differential Equation
+                    (SODE)</strong>. As the number of particles tends to
+                infinity, the behavior of the system can be captured by
+                <strong>Stochastic Partial Differential Equation
+                    (SPDE)</strong>. When the randomness of the system
+                stabilizes, it can be described by a <strong>Partial
+                    Differential Equation (PDE)</strong>, which describe the
+                macroscopic phenomena.
+            </p>
+
+            <p>
+                My research aims to rigorously investigate the progression from
+                <strong>microscopic</strong> to
+                <strong>macroscopic</strong> scales through the application of
+                <strong>asymptotic analysis</strong>, a
+                method that aligns closely with the principles of
+                <strong>mean-field theory</strong>. This approach has the
+                potential to be extended beyond physical systems, offering a
+                valuable perspective for the analysis of
+                <strong>neural networks</strong>. By conceptualizing each neuron
+                as a particle, I seek to explore how the
+                propagation of signals within a network may be understood
+                through analogous principles.
+            </p>
+
+            <p>
+                The study of <strong>Stochastic Differential Equations
+                    (SDEs)</strong> is integral to this research, as it
+                underpins much of the theoretical framework required for
+                analyzing multiscale systems. I am actively
+                pursuing advanced studies in this area, with the goal of
+                leveraging these insights to contribute to the
+                development of <strong>diffusion models</strong>.
+            </p>
+
+            <p>
+                Prior to this, I conducted research on the integration of
+                classical numerical algorithms with
+                <strong>Physics-Informed Neural Networks (PINNs)</strong>.
+                However, I have come to recognize that the
+                potential for further development of PINN-based methods is
+                somewhat constrained. As a result, I have
+                developed a keen interest in exploring the construction of more
+                effective <strong>Neural Operators</strong>,
+                as I believe that, in many aspects such as flexibility, neural
+                operators offer distinct advantages over
+                PINNs.
+            </p>
+        </section>
+
+    </body>
 
 </html>
