--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                     Ni</a>.
                 I completed my B.S. degree in <a
                     href="http://www.math.zju.edu.cn/api2017/index.psp">Mathematics
-                    and Applied
-                    Mathematics, Zhejiang University</a> in 2024.</p>
+                    and Applied Mathematics (Plan for strengthening basic disciplines), Zhejiang University</a> in
+                2024.</p>
         </section>
 
         <section>
